--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ body {
   content: "";
   position: absolute;
   background-color: #fff;
-  background-image: url("https://raw.githubusercontent.com/ArthurGC/portfolio-microverse/add-set-up-mobile-version--portfolio/images/shapes.png");
+  background-image: url("https://res.cloudinary.com/stenli-suryadinata/image/upload/v1676650218/shapes.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -394,7 +394,7 @@ body {
   content: "";
   position: absolute;
   background-color: #6070ff;
-  background-image: url("https://raw.githubusercontent.com/ArthurGC/portfolio-microverse/c8dcf1476c30337e684a9325358fe7f2b7410486/images/contact-form-shapes-mobile.svg");
+  background-image: url("https://res.cloudinary.com/stenli-suryadinata/image/upload/v1676652461/contact-form-shapes-mobile.svg");
   background-size: contain;
   background-position: right;
   background-origin: content-box;
