--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -23,7 +23,7 @@
   content: '';
   position: absolute;
   background-color: $clr-neutral-100;
-  background-image: url('https://raw.githubusercontent.com/ArthurGC/portfolio-microverse/add-set-up-mobile-version--portfolio/images/shapes.png');
+  background-image: url('images/shapes.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
