--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -220,7 +220,7 @@
   content: '';
   position: absolute;
   background-color: $clr-primary-400;
-  background-image: url('https://raw.githubusercontent.com/ArthurGC/portfolio-microverse/c8dcf1476c30337e684a9325358fe7f2b7410486/images/contact-form-shapes-mobile.svg');
+  background-image: url('images/contact-form-shapes-mobile.svg');
   background-size: contain;
   background-position: right;
   background-origin: content-box;
